2024-11-15  Michael Albinus  <michael.albinus@gmx.de>

	* README: Explain removal of temp files.

	* tramp-tests.el (tramp-test-name-prefix): New defconst.
	(tramp--test-make-temp-name, tramp-test40-make-nearby-temp-file)
	(tramp-test47-read-password, tramp-test47-read-otp-password):
	Use it.
	(tramp--test-enabled-checked): Move down.
	(tramp--test-enabled): Delete all Tramp temp files when
	environment variable $TRAMP_TEST_CLEANUP_TEMP_FILES is set.
	(tramp-test02-file-name-dissect-separate):
	Adapt `tramp-crypt-directories' according to syntax.
	(tramp-test47-read-password):
	Let-bind `tramp-connection-properties' instead of modifying
	`tramp-methods'.

2024-11-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (auth-source-cache-expiry): Set to nil.
	(tramp--test-enabled, tramp-test03-file-name-host-rules)
	(tramp-test26-interactive-file-name-completion): Keep debug
	messages when calling `tramp-cleanup-connection'.
	(tramp-test47-read-password): Test also `tramp-session-timeout'.

2024-11-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-enabled): Cleanup also
	`tramp-compat-temporary-file-directory'.
	(tramp--test-deftest-direct-async-process): Skip if underlying
	test didn't run or lasted too long.
	(tramp-test32-shell-command): Use `async-shell-command-width' of 512.
	(tramp-test36-vc-registered): Remove double let* entry.

2024-10-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el: Use `when-let*', `if-let*' and `and-let*'
	consequently.  (Bug#73441)

2024-08-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-deftest-direct-async-process):
	Skip when underlying TEST has taken too much time.
	(tramp--test-with-proper-process-name-and-buffer): Remove.
	(tramp-test45-asynchronous-requests): Remove callees.

2024-07-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (ert-resource-directory-format)
	(ert-resource-directory-trim-left-regexp)